--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <p>Hello, I am Frankie Wang, a Toronto-based front-end web developer. After years of studying languages, the curiosity about
                 programming language grew in me and led me to web development. I am passionate about making the websites beautiful and
                 functional with a friendly user experience. I am currently looking forward to join a team where I can contribute with my skills and learn more about web development.</p>
-                <p>In my spare time, I enjoy reading and photography.Thank you for visiting and I hope you enjoy my projects and photos ✨</p>
+                <p>In my spare time, I enjoy reading and photography. Thank you for visiting and I hope you enjoy my projects and photos ✨</p>
                 <div class="socialMedia">
                     <a target="_blank" href="https://github.com/kiwifran">
                         <i class="fab fa-github"></i>
@@ -197,8 +197,7 @@
                         <p class="usedTools">
                             react | sass | api | firebase | responsive | group programming |
                         </p>
-                        <p>Powered by Walmart API, this web game is waiting for a player to guess the right prices for three products.
-                            Made in collaboration with <a class="buddies" target="_blank" href="http://www.andrewtham.cc">Andrew Tham</a>, <a href="http://hungrykhao.com"  target="_blank" class="buddies">David Thavixay</a>, <a  target="_blank" href="http://jasmineteaa.com/" class="buddies">Jasmine Tossan</a>.</p>
+                        <p>Powered by Foursquare API, the College Navigator is a web application that helps users find educational institutions near a place, and allow users to bookmark some institutions as well as to edit notes about these institutions. Made in collaboration with <a class="buddies" target="_blank" href="http://www.andrewtham.cc">Andrew Tham</a>, <a href="http://hungrykhao.com"  target="_blank" class="buddies">David Thavixay</a>, <a  target="_blank" href="http://jasmineteaa.com/" class="buddies">Jasmine Tossan</a>.</p>
                         <a class="codeLink" target="_blank" href="https://andrewdavidfrankiejasmine.github.io/collegeNavigator/">Live</a>
                         <a class="codeLink" target="_blank" href="https://github.com/andrewdavidfrankiejasmine/collegeNavigator">Github</a>
                     </div>
@@ -239,67 +238,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="./scripts/parallax.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-        const letterByLetter=()=>{
-            $('.helloWorld').html(function (i, html) {
-                const chars = $.trim(html).split("");
-                return `<span class="letters"> ${chars.join('</span><span class="letters">')}</span>`
-            });
-        }
-        const scrollDown=()=>{
-                $('.arrowDown').on('click', function (event) {
-                    $('html, body').animate({
-                        scrollTop: $('main').offset().top
-                    }, 1000);
-                })
-        }
-        $upButton = $('.arrowUp');
-        const upButtonShow =()=>{
-                $(window).scroll( ()=> {
-                    if ($(window).scrollTop()>900) {
-                        $upButton.css({
-                            "display":"block"
-                        })
-                    }else {
-                        $upButton.css({
-                            "display":"none"
-                        })
-                    }
-            })
-        }
-        const scrollUp =()=>{
-            $('.arrowUp').on('click', function (e) {
-                $('html, body').animate({
-                    scrollTop: $('main').offset().top
-                }, 1200);
-            })
-        }
-        const scrollNavColor=()=>{
-            $(document).scroll(()=>{
-                const $nav = $("nav");                
-                $nav.toggleClass("scrolled", $(this).scrollTop() >($(window).height() + $nav.height()));
-            });
-        }
-        const scrollLinks=()=>{
-            $('a[href*="#"]').on('click', function (e) {
-                e.preventDefault()
-                $('html, body').animate({
-                    scrollTop: $($(this).attr('href')).offset().top
-                    },
-                    1000)
-            })
-        }
-        $(function() {
-            $(window).trigger('resize').trigger('scroll');
-            letterByLetter();
-            scrollDown();
-            AOS.init();
-            upButtonShow();
-            scrollUp();
-            scrollNavColor();
-            scrollLinks();
-        })
-        
-    </script>
+    <script src="scripts/main.js"></script>
 </body>
 </html>
