--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                         <p class="usedTools">
                             react | sass | api | firebase | responsive | group programming |
                         </p>
-                        <p>Powered by Foursquare API, the College Navigator is a web application that helps users find educational institutions near a place, and allow users to bookmark some institutions as well as to edit notes about these institutions. Made in collaboration with <a class="buddies" target="_blank" href="http://www.andrewtham.cc">Andrew Tham</a>, <a href="http://hungrykhao.com"  target="_blank" class="buddies">David Thavixay</a>, <a  target="_blank" href="http://jasmineteaa.com/" class="buddies">Jasmine Tossan</a>.</p>
+                        <p>Powered by Foursquare API, the College Navigator is a web application that helps users find educational institutions near a place, and allows users to bookmark some institutions as well as to edit notes about these institutions. Made in collaboration with <a class="buddies" target="_blank" href="http://www.andrewtham.cc">Andrew Tham</a>, <a href="http://hungrykhao.com"  target="_blank" class="buddies">David Thavixay</a> and <a  target="_blank" href="http://jasmineteaa.com/" class="buddies">Jasmine Tossan</a>.</p>
                         <a class="codeLink" target="_blank" href="https://andrewdavidfrankiejasmine.github.io/collegeNavigator/">Live</a>
                         <a class="codeLink" target="_blank" href="https://github.com/andrewdavidfrankiejasmine/collegeNavigator">Github</a>
                     </div>
