--- a/index.html
+++ b/index.html
@@ -142,18 +142,18 @@
                         <img src="./assets/easyRecipe.png" alt="mockup of project">
                     </div>
                     <div class="projectInfo">
-                        <h3>Easy Recipe</h3>
+                        <h3>Easy Recipes</h3>
                         <p class="usedTools">
                             html&css | sass | jquery | javascript | responsive
                         </p>
-                        <p>Not sure about what to cook tonight? Take the quiz from the Easy Recipe and get a recipe recommendation based on your preferences. </p>
+                        <p>Not sure about what to cook tonight? Take the quiz from the Easy Recipes and get a recipe recommendation based on your preferences. </p>
                         <a class="codeLink" target="_blank" href="https://kiwifran.github.io/frankie-wang-project-three/">Live</a>
                         <a class="codeLink" target="_blank" href="https://github.com/kiwifran/frankie-wang-project-three">Github</a>
                     </div>
                 </div>
                 <div class="project priceGame">
                     <div class="projectInfo">
-                        <h3>Guess The Price</h3>
+                        <h3>Guess the Price</h3>
                         <p class="usedTools">
                             html&css | sass | jquery | javascript | api | responsive | paired programming |
                         </p>
