--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <p>Hello, I am Frankie Wang, a Toronto-based front-end web developer. After years of studying languages, the curiosity about
                 programming language grew in me and led me to web development. I am passionate about making the websites beautiful and
                 functional with a friendly user experience. I am currently looking forward to join a team where I can contribute with my skills and learn more about web development.</p>
-                <p>In my spare time, I enjoy reading and photography. Thank you for visiting and I hope you enjoy my projects and photos ✨</p>
+                <p>In my spare time, I enjoy reading and photography. Thank you for visiting, and I hope you enjoy my projects and photos ✨</p>
                 <div class="socialMedia">
                     <a aria-label="go to Frankie Wang's Github page" target="_blank" href="https://github.com/kiwifran">
                         <i class="fab fa-github"></i>
