--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     <div class="projectInfo">
                         <h3>Guess the Price</h3>
                         <p class="usedTools">
-                            html&css | sass | jquery | javascript | api | responsive | paired programming |
+                            html&css | sass | jquery | javascript | api | responsive | paired programming
                         </p>
                         <p>Powered by Walmart API, this web game is waiting for a player to guess the right prices for three products. Made in collaboration with <a class="buddies" target="_blank" href="http://andreacodes.com">Andrea Maille</a>.</p>
                         <a class="codeLink" target="_blank" href="https://andrea-maille-frankie-wang-project-four.github.io/guess-the-price/">Live</a>
@@ -190,7 +190,7 @@
                     <div class="projectInfo">
                         <h3>College Navigator</h3>
                         <p class="usedTools">
-                            react | sass | api | firebase | responsive | group programming |
+                            react | sass | api | firebase | responsive | group programming
                         </p>
                         <p>Powered by Foursquare API, the College Navigator is a web application that helps users find educational institutions near a place, and allows users to bookmark some institutions as well as to edit notes about these institutions. Made in collaboration with <a class="buddies" target="_blank" href="http://www.andrewtham.cc">Andrew Tham</a>, <a href="http://hungrykhao.com"  target="_blank" class="buddies">David Thavixay</a> and <a  target="_blank" href="http://jasmineteaa.com/" class="buddies">Jasmine Tossan</a>.</p>
                         <a class="codeLink" target="_blank" href="https://andrewdavidfrankiejasmine.github.io/collegeNavigator/">Live</a>
