add a new project

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         <p>JAVASCRIPT</p>
                     </li>
                     <li class="skillIcon">
-                        <i aria-hidden="true" class="devicon-jquery-plain"></i>
+                        <i aria-hidden="true" class="devicon-jQuery-plain"></i>
                         <p>JQUERY</p>
                     </li>
                     <li class="skillIcon">
@@ -133,6 +133,7 @@
         <div class="worksWrapper wrapper" id="works">
             <h2>Works</h2>
             <div class="projects">
+
                 <div class="project recipe">
                     <div 
                     class="projectImg" 
@@ -144,18 +145,19 @@
                     <div class="projectInfo">
                         <h3>Easy Recipes</h3>
                         <p class="usedTools">
-                            html&css | sass | jquery | javascript | responsive
+                            html&css | sass | jQuery | javascript | responsive
                         </p>
                         <p>Not sure about what to cook tonight? Take the quiz from the Easy Recipes and get a recipe recommendation based on your preferences. </p>
                         <a class="codeLink" target="_blank" href="https://kiwifran.github.io/frankie-wang-project-three/">Live</a>
                         <a class="codeLink" target="_blank" href="https://github.com/kiwifran/frankie-wang-project-three">Github</a>
                     </div>
                 </div>
+
                 <div class="project priceGame">
                     <div class="projectInfo">
                         <h3>Guess the Price</h3>
                         <p class="usedTools">
-                            html&css | sass | jquery | javascript | api | responsive | paired programming
+                            html&css | sass | jQuery | javascript | api | responsive | paired programming
                         </p>
                         <p>Powered by Walmart API, this web game is waiting for a player to guess the right prices for three products. Made in collaboration with <a class="buddies" target="_blank" href="http://andreacodes.com">Andrea Maille</a>.</p>
                         <a class="codeLink" target="_blank" href="https://andrea-maille-frankie-wang-project-four.github.io/guess-the-price/">Live</a>
@@ -169,6 +171,7 @@
                         <img src="./assets/guessThePrice.png" alt="mockup of project">
                     </div>
                 </div>
+
                 <div class="project melody">
                     <div class="projectImg"  
                     data-aos="fade-right"
@@ -181,11 +184,12 @@
                         <p class="usedTools">
                             react | sass | api | responsive
                         </p>
-                        <p>When you're wondering what the lyrics of a song look like, come and use this react app to find your track and lyrics, which are provided by Itunes API and Apiseeds API.</p>
+                        <p>When you're wondering what the lyrics of a song look like, come and use this react app to find your tracks and lyrics, which are provided by Itunes API and Apiseeds API.</p>
                         <a class="codeLink" target="_blank" href="https://kiwifran.github.io/TracksAndLyrics/">Live</a>
                         <a class="codeLink" target="_blank" href="https://github.com/kiwifran/TracksAndLyrics">Github</a>
                     </div>
                 </div>
+
                 <div class="project collegeNav">
                     <div class="projectInfo">
                         <h3>College Navigator</h3>
@@ -204,6 +208,22 @@
                         <img src="./assets/collegeNav.png" alt="mockup of project">
                     </div>
                 </div>
+
+                <div class="project events">
+                    <div class="projectImg" data-aos="fade-right" data-aos-easing="linear" data-aos-duration="800">
+                        <img src="./assets/eventsFinder.png" alt="mockup of project">
+                    </div>
+                    <div class="projectInfo">
+                        <h3>Events Finder</h3>
+                        <p class="usedTools">
+                            jQuery | Bootstrap | sass | api | responsive
+                        </p>
+                        <p>Are you prepared for some great events? Discover unforgettable moments using this web app. Powered by Meetup API.</p>
+                        <a class="codeLink" target="_blank" href="https://kiwifran.github.io/eventFinderApp/">Live</a>
+                        <a class="codeLink" target="_blank" href="https://github.com/kiwifran/eventFinderApp">Github</a>
+                    </div>
+                </div>
+                
             </div>
         </div>
         <div class="fixedBgTwo fixedBg"></div>
@@ -234,7 +254,7 @@
     <footer>
         <p>&copy;Frankie Wang 2019</p>
     </footer>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src='https://code.jquery.com/jquery-3.2.1.min.js' integrity='sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4='crossorigin='anonymous'></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="scripts/main.js"></script>
 </body>
