compressing images and minor changes

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         <p>JAVASCRIPT</p>
                     </li>
                     <li class="skillIcon">
-                        <i aria-hidden="true" class="devicon-jQuery-plain"></i>
+                        <i aria-hidden="true" class="devicon-jquery-plain"></i>
                         <p>JQUERY</p>
                     </li>
                     <li class="skillIcon">
@@ -184,7 +184,7 @@
                         <p class="usedTools">
                             react | sass | api | responsive
                         </p>
-                        <p>When you're wondering what the lyrics of a song look like, come and use this react app to find your tracks and lyrics, which are provided by Itunes API and Apiseeds API.</p>
+                        <p>When you're wondering what the lyrics of a song look like, come and use this react app to find your tracks and lyrics, which are provided by Itunes API and Apiseeds API. Don't forget to listen to previews and log in with your google account to save your favourite songs into your own list!</p>
                         <a class="codeLink" target="_blank" href="https://kiwifran.github.io/TracksAndLyrics/">Live</a>
                         <a class="codeLink" target="_blank" href="https://github.com/kiwifran/TracksAndLyrics">Github</a>
                     </div>
